--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-social-icons": "^6.24.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1"
   },
