fix: redesign Telegram chat mockup and frame
Introduces a new MockupFrame component using react-device-mockup for a responsive device frame around the TelegramChatMockup. Refactors TelegramChatMockup and related styles for improved layout, status bar, and input bar appearance. Updates message rendering to better handle metadata and timestamps. Adds react-device-mockup to dependencies.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "motion": "^12.23.12",
     "next": "^15.5.2",
     "react": "19.1.0",
+    "react-device-mockup": "^1.0.0",
     "react-dom": "19.1.0",
     "react-social-icons": "^6.24.0",
     "simplex-noise": "^4.0.3",
