--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.4",
-    "@next/third-parties": "^15.5.2",
+    "@next/third-parties": "^16.1.6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -20,7 +20,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "motion": "^12.23.12",
-    "next": "^15.5.2",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-device-mockup": "^1.0.0",
     "react-dom": "19.1.0",
@@ -35,7 +35,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
